add rust toolchain to fix Failed to get runtime version

--- a/parachains/runtimes/assets/statemine/Cargo.toml
+++ b/parachains/runtimes/assets/statemine/Cargo.toml
@@ -196,4 +196,6 @@ std = [
 	"parachain-info/std",
 	"parachains-common/std",
 	"pallet-ibc/std",
+	"pallet-ics20-transfer/std",
+	"ibc-support/std",
 ]
